# Albedo

./: Anchor.toml  README.md  notes.md  to-do.md
Docs/: DEVELOPMENT_GUIDELINES.md  FAQs.md  backend-plan.md  how-insurance-works.md
backend/: .gitignore  package-lock.json  package.json  users.json
backend/src/: index.ts  sendEmail.ts
backend/src/routes/: emailVerification.ts  signup.ts
data-monetisation/: Anchor.toml
data-monetisation/programs/data-monetisation/: Cargo.toml
data-monetisation/tests/: data-monetisation.ts
frontend/: config-overrides.js  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.js  App.tsx  GlobalStyles.css  GlobalStyles.scss  index.tsx
frontend/src/styles/: GlobalStyles.css  GlobalStyles.scss  _mixins.scss  (+2 more)
insurance-disbursal-escrow/: Anchor.toml  package-lock.json  package.json  pull-data-feed.js  pull-data-feed.ts
insurance-disbursal-escrow/programs/insurance-disbursal-escrow/: Cargo.toml
insurance-disbursal-escrow/programs/insurance-disbursal-escrow/src/: lib.rs
insurance-disbursal-escrow/programs/insurance-disbursal-escrow/src/pull_data_feed/: mod.rs  pull_data_feed.rs
insurance-disbursal-escrow/tests/: insurance-disbursal-escrow.ts
insurance-pool-vault/: notes.md
programs/albedo/: Cargo.toml
sol-vault/: Anchor.toml
sol-vault copy/: Anchor.toml
sol-vault copy/tests/: insurance-pool-vault.ts
sol-vault/programs/insurance-pool-vault/: Cargo.toml
sol-vault/programs/insurance-pool-vault/src/: lib.rs
sol-vault/tests/: insurance-pool-vault.ts
tests/: albedo.ts
(+78 files in other folders)
