[package]
name = "insurance-disbursal-escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "insurance_disbursal_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
switchboard-solana = "0.9"
sol_vault = { path = "../../../sol-vault/programs/insurance-pool-vault/src/lib.rs" }
